--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -15,9 +15,8 @@ font:
 
 draw_bold_text_with_bright_colors: true
 
-background_opacity: 0.95
-
 window:
+  opacity: 0.95
   padding:
     x: 20
     y: 20
