--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,17 +1,17 @@
 font:
   normal:
-    family: "Iosevka SS08"
+    family: "Berkeley Mono"
     style: Regular
 
   bold:
-    family: "Iosevka SS08"
+    family: "Berkeley Mono"
     style: Bold
 
   italic:
-    family: "Iosevka SS08"
+    family: "Berkeley Mono"
     style: "Medium Italic"
 
-  size: 11.0
+  size: 10.0
 
 draw_bold_text_with_bright_colors: true
 
