Ignore local zshenv

--- a/config/kitty/theme.conf
+++ b/config/kitty/theme.conf
@@ -1,21 +1,21 @@
-background            #000000
-foreground            #f1f1f1
-cursor                #7f7f7f
-selection_background  #b4d5ff
-color0                #4f4f4f
-color8                #7b7b7b
-color1                #fa6c5f
-color9                #fcb6af
-color2                #a8fe60
-color10               #ceffab
-color3                #fffeb6
-color11               #fffecc
-color4                #96cafd
-color12               #b5dcfe
-color5                #fa72fc
-color13               #fb9bfe
-color6                #c6c4fd
-color14               #dfdffd
-color7                #eeedee
-color15               #fefffe
-selection_foreground #000000
+background #111111
+foreground #dedede
+cursor #ffa460
+selection_background #464d91
+color0 #919191
+color8 #bdbdbd
+color1 #e17373
+color9 #ffa0a0
+color2 #94b978
+color10 #bddeab
+color3 #ffb97b
+color11 #ffdba0
+color4 #96bddb
+color12 #b1d7f6
+color5 #e1c0fa
+color13 #fbdaff
+color6 #00988e
+color14 #19b2a7
+color7 #dedede
+color15 #ffffff
+selection_foreground #111111
