Add search in kitty

--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -2241,3 +2241,6 @@ tab_bar_style fade
 #: }}}
 
 hide_window_decorations titlebar-only
+
+map ctrl+f launch --type=overlay --stdin-source=@screen_scrollback /bin/sh -c "/opt/homebrew/bin/fzf --no-sort --no-mouse --exact -i --tac | kitty +kitten clipboard"
+
