--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -1,6 +1,5 @@
-font-family = TX-02
-font-size = 10
-window-theme = dark
+font-family = "Berkeley Mono"
+window-theme = light
 theme = ayu
 
 window-padding-x = 20
