--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -1,11 +1,11 @@
 font-family = "Berkeley Mono"
-window-theme = light
-theme = ayu
+window-theme = dark
+theme = iceberg-dark
 
 window-padding-x = 20
 window-padding-y = 20
 
-window-decoration = false
+# window-decoration = false
 window-colorspace = display-p3
 macos-titlebar-style = hidden
 confirm-close-surface = false
