--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -1,6 +1,6 @@
 font-family = "Berkeley Mono"
 window-theme = dark
-theme = iceberg-dark
+theme = Adventure
 
 window-padding-x = 20
 window-padding-y = 20
