--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -1,4 +1,5 @@
 font-family = "Berkeley Mono"
+font-size = 14
 window-theme = dark
 theme = Adventure
 
@@ -9,3 +10,8 @@ window-padding-y = 20
 window-colorspace = display-p3
 macos-titlebar-style = tabs
 confirm-close-surface = false
+
+mouse-hide-while-typing = true
+adjust-cursor-thickness = 300%
+
+unfocused-split-opacity = 0.9
