--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -1,7 +1,7 @@
 font-family = "Berkeley Mono"
 font-size = 14
 window-theme = dark
-theme = Adventure
+theme = "CutiePro"
 
 window-padding-x = 40
 window-padding-y = 20
