--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -1,7 +1,6 @@
 font-family = "Berkeley Mono"
 font-size = 14
-window-theme = dark
-theme = "Hardcore"
+theme = detuned
 
 window-padding-x = 40
 window-padding-y = 20
