--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -1,6 +1,6 @@
 font-family = "Berkeley Mono"
 font-size = 14
-theme = dark:CutiePro,light:flexoki-light
+theme = dark:Havn Skumring ,light:Flexoki Light
 
 window-padding-x = 40
 window-padding-y = 20
